# ai-no-jimaku-gumi

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: linux-rust.yml  ubuntu-rust.yml
data/: .gitignore
src/: main.rs
src/output/: ffmpeg_subtitle.rs  mod.rs  srt.rs  whisper_state.rs
src/translate/: deepl.rs  llm.rs  mod.rs
src/utils/: ffmpeg_audio.rs  mod.rs  whisper_state.rs
src/whisper/: experiment.rs
