[package]
name = "ainojimakugumi"
description = "aI NO jimaKu gumI, a sub-title maker using AI."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ffmpeg-next = "7.1.0"
hound = "3.5.1"
tempfile = "3.14.0"
whisper-rs = "0.13.2"

# translation API
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }

[dev-dependencies]
hound = "3.5.1"
tokio = { version = "1", features = ["full"] }
mockito = "1.6.1"
