[package]
name = "ainojimakugumi"
description = "aI NO jimaKu gumI, a sub-title maker using AI."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ffmpeg-next = "7.1.0"
hound = "3.5.1"
tempfile = "3.14.0"

# translation API
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
genai = "0.1.16"
chrono = "0.4.39"

# whisper.cpp backend on different platforms
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13.2" }
# Vulkan
# whisper-rs = { version = "0.13.2", features = ["vulkan"] }
# NVIDIA CUDA
# whisper-rs = { version = "0.13.2", features = ["cuda"] }
# AMD ROCm
# whisper-rs = { version = "0.13.2", features = ["hipblas"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13.2" }
# Vulkan
# whisper-rs = { version = "0.13.2", features = ["vulkan"] }
# NVIDIA CUDA
# whisper-rs = { version = "0.13.2", features = ["cuda"] }

[dev-dependencies]
mockito = "1.6.1"
